--- a/app/src/main/res/layout/fragment_weather_of_current_time.xml
+++ b/app/src/main/res/layout/fragment_weather_of_current_time.xml
@@ -4,11 +4,62 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red">
+    android:background="@color/red"
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
-    <TextView
+
+    <ImageView
+        android:id="@+id/imgWeatherType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Weather of current time"/>
+        android:background="@null"
+        android:src="@drawable/ic_sunny"
+        android:layout_marginTop="@dimen/spacing_large"/>
+
+    <TextView
+        android:id="@+id/txtTemperature"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_temperature"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:textColor="@android:color/white"
+        android:text="19°C"/>
+
+    <TextView
+        android:id="@+id/txtDescription"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="@dimen/font_larger"
+        android:layout_marginTop="@dimen/spacing_small"
+        android:textColor="@android:color/white"
+        android:text="Sunny"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="@dimen/spacing_small">
+        <TextView
+            android:id="@+id/txtPrecipitation"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/font_large"
+            android:layout_marginRight="@dimen/spacing_huge"
+            android:textColor="@android:color/white"
+            android:drawableLeft="@drawable/ic_precipitation"
+            android:drawablePadding="@dimen/spacing_small"
+            android:text="14%"/>
+
+        <TextView
+            android:id="@+id/txtWind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/font_large"
+            android:textColor="@android:color/white"
+            android:drawableLeft="@drawable/ic_wind"
+            android:drawablePadding="@dimen/spacing_small"
+            android:text="5 k/h"/>
+    </LinearLayout>
 
 </LinearLayout>
