--- a/app/src/main/res/layout/activity_choose_cities.xml
+++ b/app/src/main/res/layout/activity_choose_cities.xml
@@ -1,40 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".ui.activity.MainActivity"
-    android:background="@drawable/bg_main">
+    android:background="@drawable/bg_main"
+    android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
 
-        <RelativeLayout
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/txtCity"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="City"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:textColor="@android:color/white"
-                android:textSize="18sp"/>
-
-            <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_centerInParent="true"
-                android:gravity="center_vertical"
-                android:text="Weather"
+                android:layout_gravity="center"
+                android:text="Choose City"
                 android:paddingLeft="@dimen/spacing_small"
                 android:paddingRight="@dimen/spacing_small"
                 android:textColor="@android:color/white"
@@ -42,23 +29,30 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/txtUpdate"
+                android:id="@+id/txtDone"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_centerVertical="true"
-                android:gravity="center_vertical"
-                android:text="Update"
+                android:layout_gravity="center_vertical|right"
+                android:text="Done"
                 android:paddingLeft="@dimen/spacing_small"
                 android:paddingRight="@dimen/spacing_small"
-                android:layout_alignParentRight="true"
                 android:textColor="@android:color/white"
                 android:textSize="18sp"/>
-        </RelativeLayout>
+        </FrameLayout>
     </android.support.v7.widget.Toolbar>
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <ListView
+        android:id="@+id/city_list_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:cacheColorHint="@android:color/transparent"
+        android:divider="@color/gray"
+        android:dividerHeight="1dip"
+        android:listSelector="@android:color/transparent"
+        android:scrollbars="none"
+        android:paddingLeft="@dimen/spacing_normal"
+        android:paddingRight="@dimen/spacing_normal"
+        android:smoothScrollbar="true"/>
 
 </LinearLayout>
