--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -1,34 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
-    android:paddingLeft="10dip"
-    android:paddingRight="5dip"
-    android:descendantFocusability="blocksDescendants" >
+    android:descendantFocusability="blocksDescendants"
+    android:paddingBottom="@dimen/spacing_normal"
+    android:paddingTop="@dimen/spacing_normal">
 
     <TextView
         android:id="@+id/name_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
-        android:textColor="@color/gray_dark"
-        android:lines="2"
-        android:textSize="@dimen/font_normal"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="100dip"
         android:gravity="center_vertical"
-        android:layout_marginRight="100dip"/>
+        android:lines="2"
+        android:textColor="@color/white"
+        android:textSize="@dimen/font_large"/>
 
     <ImageButton
         android:id="@+id/checkbox_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
+        android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
         android:background="@null"
+        android:indeterminate="true"
         android:padding="10dip"
         android:src="@drawable/checkbox_button"
-        android:layout_alignParentRight="true"
         />
 
 </RelativeLayout>
