--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
     </style>
 
+    <style name="AppTheme.Dialog" parent="Theme.AppCompat.Dialog"/>
+
+    <style name="AppTheme.Dialog.Transparent" parent="AppTheme.Dialog">
+        <item name="android:colorBackground">@android:color/transparent</item>
+    </style>
+
+
+    <style name="AppTheme.Widget.Button.OK" parent="android:Widget.Holo.Light.Button">
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
 </resources>
